ingress-basic/airflow-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow-external
  namespace: ingress-basic
spec:
  type: ExternalName
  externalName: airflow-web.airflow.svc.cluster.local # ${SERVICE-NAME}.${NAMESPACE}.svc.cluster.local
  ports:
    - port: 80 # specify the port of service you want to expose 
      targetPort: 8080 # port of external service 
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-ingress
  namespace: ingress-basic
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - "NGINX_CONTROLLER_EXTERNAL_DNS"
    secretName: letsencrypt-prod # 없으면 cluster-issuer가 생성해준다.
  rules:
  - host: "NGINX_CONTROLLER_EXTERNAL_DNS"
    http:
      paths:
      - path: /airflow
        pathType: Prefix
        backend:
          service:
            name: airflow-external
            port:
              number: 80
